@@ -101,6 +101,13 @@
 
         <dependency>
             <groupId>nl.pim16aap2.BigDoors</groupId>
+            <artifactId>hook-medieval-factions</artifactId>
+            <version>0.1.8.41-ALPHA</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>nl.pim16aap2.BigDoors</groupId>
             <artifactId>hook-konquest</artifactId>
             <version>0.1.8.41-ALPHA</version>
             <scope>compile</scope>
