@@ -1,5 +1,6 @@
 Alpha 0.1.8.41
 - Add support for GriefDefender v2. Thanks, haroldrc, for the heads-up!
+- Add support for Medieval Factions. Thanks, OGVampire, for the suggestion!
 
 Alpha 0.1.8.40
 - Add support for 1.19.1.
